# genomics-final-project

./: .gitignore  Makefile  README.md  conda.yaml  drosophila_protein_ontology_and_seqs.csv.dvc  project_guidelines.docx  pyproject.toml
.dvc/: config
data/intermediary/: .gitignore
data/model_artifacts/: .gitignore
data/raw/: .gitignore  QuickGO-annotations-1586638417814-20200411.README.md.dvc  QuickGO-annotations-1586638417814-20200411.gpad.dvc
data/raw/fly_shim/: .gitignore  QuickGO-annotations-1587408787815-20200420.README.md  QuickGO-annotations-1587408787815-20200420.tsv.dvc
data/raw/fly_shim_subset/: .gitignore  QuickGO-annotations-1586973806005-20200415.README.md.dvc  QuickGO-annotations-1586973806005-20200415.tsv.dvc
nbs/: ascension_lookup_issue.ipynb  imbalance_analysis.ipynb  lstm.ipynb  scratch.ipynb  scratch_tf.ipynb  scratch_torch.ipynb  scratch_torch_hl_api.ipynb
pipeline/: clean_data.dvc  clean_data.py  train.dvc  train.py
